---
source: src/parser/statement.rs
expression: "parse_stmt(\"if (x) { 1; } else { 2; }\".into()).unwrap().1"
---
{
  "type": "IfStatement",
  "test": {
    "type": "Identifier",
    "name": "x",
    "start": 4,
    "end": 5
  },
  "consequent": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Literal",
          "value": 1.0,
          "start": 9,
          "end": 10
        },
        "start": 9,
        "end": 11
      }
    ],
    "start": 7,
    "end": 13
  },
  "alternate": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Literal",
          "value": 2.0,
          "start": 21,
          "end": 22
        },
        "start": 21,
        "end": 23
      }
    ],
    "start": 19,
    "end": 25
  },
  "start": 0,
  "end": 25
}
